add Table Of Contents

--- a/_posts/2018-08-05-OS-Proess.md
+++ b/_posts/2018-08-05-OS-Proess.md
@@ -15,9 +15,16 @@ comments: true
 # 3강. Process
 
 강의 링크 : [https://core.ewha.ac.kr/publicview/C0101020140318134023355997?vmode=f](https://core.ewha.ac.kr/publicview/C0101020140318134023355997?vmode=f)
-
 [TOC]
-
+- [3강. Process](#3--process)
+- [프로세스란?](#------)
+  * [프로세스의 문맥](#--------)
+  * [프로세스의 상태](#--------)
+  * [Process Control Block (PCB)](#process-control-block--pcb-)
+  * [문맥 교환, Context Switch](#-------context-switch)
+  * [Queue, 프로세스를 스케쥴링 한다.](#queue---------------)
+  * [스케쥴러, Scheduler](#------scheduler)
+  * [스레드, Thread](#-----thread)
 # 프로세스란?
 
 "Process is a program in execution"
