--- a/_posts/2018-08-04-OS-CPU.md
+++ b/_posts/2018-08-04-OS-CPU.md
@@ -11,24 +11,13 @@ tag:
 
 comments: true
 ---
+* auto-gen TOC:
+{:toc}
+
 # 2강. System Structure & Program Execution
 
 [강의 링크](https://core.ewha.ac.kr/publicview/C0101020140314151238067290?vmode=f)
 
-- [2강. System Structure & Program Execution](#2--system-structure---program-execution)
-- [CPU의 작동 과정](#cpu-------)
-  * [메모리](#---)
-  * [DISK , I/O](#disk---i-o)
-  * [Timer](#timer)
-  * [Mode bit](#mode-bit)
-  * [DMA 컨트롤러, Direct Memory Access](#dma-------direct-memory-access)
-  * [입출력(I/O) 수행](#----i-o----)
-  * [인터럽트 (Interrupt)](#------interrupt-)
-  * [동기식 입출력, 비 동기식 입출력](#------------------)
-  * [저장장치 계층 구조](#----------)
-  * [프로그램의 실행 (메모리 로드)](#-----------------)
-  * [커널 주소 공간 (Kernel Address Space)](#----------kernel-address-space-)
-  * [사용자 프로그램이 사용하는 함수](#-----------------)
 
 # CPU의 작동 과정
 <img width="400" alt="screenshot2018-08-02at10-7fbe1368-e802-4a54-bc28-5d87bba08c67 33 57am" src="https://user-images.githubusercontent.com/37807838/43672997-be493de8-97f5-11e8-8260-8b565705e696.png">
